# xml-analysis-framework

./: .env.example  AI_INTEGRATION_ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATION_PLAN.md  README.md  REPOSITORY_UPDATE_SUMMARY.md  SECURITY.md  lint.sh  migrate_handlers_v2.py  migrate_remaining.py  publish_pypi.sh  pyproject.toml  repomix-output.xml  requirements.txt  run_tests.sh  s1000d_rag_demo.py  setup.py  test_1.4.4_regression.py  test_all_s1000d.py  test_comprehensive_regression.py  test_deployed_1.4.4.py  test_docs_examples.py  test_final_regression.py  test_pypi_package.py  test_s1000d_data.py  test_s1000d_integration.py
.github/workflows/: tests.yml
ci-results/: lint.txt
examples/: README.md  analyze_enhanced.py  basic_analysis.py  enhanced_analysis.py  framework_demo.py  quick_test.py  xml-demo-script.py
notebooks/: 01_testing_documentation_examples.ipynb  02_agentic_workflow_example.ipynb  03_pipeline_data_ingestion.ipynb  04_pipeline_vector_population.ipynb  05_pipeline_graph_rag.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  xml_analysis_pipeline.pipeline
notebooks/data/: build.xml
sample_data/: xml-test-files-guide.md
sample_data/test_files/: download_stats.json
sample_data/test_files_synthetic/: COLLECTION_SUMMARY.md
src/: __init__.py  base.py  base_extended.py  unified_interface.py
src/core/: __init__.py  analyzer.py  chunking.py  schema_analyzer.py
src/handlers/: __init__.py  ant_build_handler.py  bpmn_handler.py  docbook_handler.py  enterprise_config_handler.py  generic_xml_handler.py  gpx_handler.py  graphml_handler.py  hibernate_handler.py  ivy_handler.py  kml_handler.py  log4j_config_handler.py  maven_pom_handler.py  openapi_xml_handler.py  properties_xml_handler.py  rss_handler.py  s1000d_entity_handler.py  s1000d_handler.py  saml_handler.py  scap_handler.py  servicenow_handler.py  sitemap_handler.py  soap_envelope_handler.py  spring_config_handler.py  struts_config_handler.py  svg_handler.py  test_report_handler.py  wadl_handler.py  wsdl_handler.py  xhtml_handler.py  xliff_handler.py  xsd_handler.py
src/utils/: __init__.py  file_utils.py
test_data/s1000d/: README.md
test_data/s1000d/descriptions/: DMC-BRAKE-AAA-DA1-00-00-00AA-041A-A_003-00_EN-US.XML  DMC-BRAKE-AAA-DA1-00-00-00AA-341A-A_003-00_EN-US.XML  DMC-S1000DBIKE-AAA-D00-00-00-00AA-041A-A_011-00_EN-US.XML  DMC-S1000DBIKE-AAA-D00-00-01-00AA-341A-A_003-00_EN-US.XML  (+5 more)
tests/: README.md  __init__.py  run_all_tests.py  save_scap_chunks.py  test_api_harmonization.py  test_existing_handlers.py  test_framework.py  test_migration_progress.py  test_performance.py  test_setup.py  view_chunk_content.py
tests/comprehensive/: __init__.py  test_all_sample_data.py  test_gpx_comprehensive.py  test_kml_manual.py  test_xhtml_comprehensive.py
tests/debug/: debug_analyzer_issue.py  debug_hierarchical_chunking.py
tests/integration/: __init__.py  test_ant_integration.py  test_docbook_integration.py  test_gpx_integration.py  test_graphml_integration.py  test_kml_integration.py  test_servicenow_integration.py  test_sitemap_integration.py  test_struts_integration.py  test_svg_integration.py  test_wadl_integration.py  test_xhtml_integration.py  test_xliff_integration.py
tests/manual/: analyze_test_results.py  test_all_chunking.py  test_chunking_strategies.py  test_correct_analyzer.py  test_end_to_end_workflow.py  test_handler_registration.py  test_hierarchical_scap.py  test_servicenow_analysis.py  test_small_sample.py
tests/unit/: __init__.py  test_ant_handler.py  test_docbook_handler.py  test_gpx_handler.py  test_graphml_handler.py  test_hibernate_handler.py  test_ivy_handler.py  test_kml_handler.py  test_log4j_handler.py  test_saml_handler.py  test_servicenow_handler.py  test_sitemap_handler.py  test_soap_handler.py  test_struts_handler.py  test_svg_handler.py  test_wadl_handler.py  test_xhtml_handler.py  test_xliff_handler.py
(+83 files in other folders)
