[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xml-analysis-framework"
dynamic = ["version"]
description = "XML document analysis and preprocessing framework designed for AI/ML data pipelines"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Building Blocks", email = "wjackson@redhat.com"}
]
keywords = ["xml", "analysis", "ai", "ml", "document-processing", "semantic-search"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/redhat-ai-americas/xml-analysis-framework"
Repository = "https://github.com/redhat-ai-americas/xml-analysis-framework"
Issues = "https://github.com/redhat-ai-americas/xml-analysis-framework/issues"
Documentation = "https://github.com/redhat-ai-americas/xml-analysis-framework/blob/main/README.md"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
docs = [
    "sphinx>=3.0",
    "sphinx_rtd_theme>=0.5",
]

[project.scripts]
xml-analyze = "xml_analysis_framework.examples.basic_analysis:main"
xml-analyze-enhanced = "xml_analysis_framework.examples.enhanced_analysis:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/xml_analysis_framework/_version.py"